--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   margin: 0;
   padding: 0;
   font: inherit;
+  text-decoration: none;
 }
 
 /* Prevent font size inflation */
@@ -138,3 +139,4 @@ body{
   line-height: var(--lh-secondary);
   text-align: center;
 }
+
